// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCardMetricTotals Component should handle custom card displays: fulfilled 1`] = `
<graphcardmetrictotals
  props="{
  "children": []
}"
>
  <div
    class="curiosity-graph__totals curiosity-usage-graph__totals"
    data-test="graphMetricTotals-hello-world"
    data-test-data="{"dataSets":[]}"
  >
    <div>
      <div
        class="curiosity-graph__totals-column curiosity-usage-graph__totals-column"
      >
        <div
          class="pf-v5-c-card pf-m-plain curiosity-graph__totals-column-card curiosity-usage-graph__totals-column-card "
          data-ouia-component-id="OUIA-Generated-Card-1"
          data-ouia-component-type="PF5/Card"
          data-ouia-safe="true"
          data-test="graphMetricTotalsCard-0"
          id=""
        >
          <div
            class="pf-v5-c-card__header curiosity-graph__totals-column-card-header"
          >
            <div
              class="pf-v5-c-card__header-main"
            >
              <div
                class="pf-v5-c-card__title"
              >
                <div
                  class="pf-v5-c-card__title-text"
                >
                  <h2
                    class="pf-v5-c-title pf-m-md"
                    data-ouia-component-id="OUIA-Generated-Title-1"
                    data-ouia-component-type="PF5/Title"
                    data-ouia-safe="true"
                  >
                    lorem
                  </h2>
                </div>
              </div>
            </div>
          </div>
          <div
            class="pf-v5-c-card__body curiosity-graph__totals-column-card-body"
          >
            <div>
              t(ipsum-{{data}}, {"testId":"custom test id","data":"{\\"dataSets\\":[]}"})
            </div>
          </div>
          <div
            class="pf-v5-c-card__footer curiosity-graph__totals-column-card-footer"
          >
            <div>
              dolor sit timestamp
            </div>
          </div>
        </div>
        <div
          class="pf-v5-c-card pf-m-plain curiosity-graph__totals-column-card curiosity-usage-graph__totals-column-card "
          data-ouia-component-id="OUIA-Generated-Card-2"
          data-ouia-component-type="PF5/Card"
          data-ouia-safe="true"
          data-test="graphMetricTotalsCard-1"
          id=""
        >
          <div
            class="pf-v5-c-card__header curiosity-graph__totals-column-card-header"
          >
            <div
              class="pf-v5-c-card__header-main"
            >
              <div
                class="pf-v5-c-card__title"
              >
                <div
                  class="pf-v5-c-card__title-text"
                >
                  <h2
                    class="pf-v5-c-title pf-m-md"
                    data-ouia-component-id="OUIA-Generated-Title-2"
                    data-ouia-component-type="PF5/Title"
                    data-ouia-safe="true"
                  >
                    hello-{"dataSets":[]}
                  </h2>
                </div>
              </div>
            </div>
          </div>
          <div
            class="pf-v5-c-card__body curiosity-graph__totals-column-card-body"
          >
            <div>
              world
            </div>
          </div>
          <div
            class="pf-v5-c-card__footer curiosity-graph__totals-column-card-footer"
          >
            <div>
              dolor sit timestamp
            </div>
          </div>
        </div>
        <div
          class="pf-v5-c-card pf-m-plain curiosity-graph__totals-column-card curiosity-usage-graph__totals-column-card "
          data-ouia-component-id="OUIA-Generated-Card-3"
          data-ouia-component-type="PF5/Card"
          data-ouia-safe="true"
          data-test="graphMetricTotalsCard-2"
          id=""
        >
          <div
            class="pf-v5-c-card__header curiosity-graph__totals-column-card-header"
          >
            <div
              class="pf-v5-c-card__header-main"
            >
              <div
                class="pf-v5-c-card__title"
              >
                <div
                  class="pf-v5-c-card__title-text"
                >
                  <h2
                    class="pf-v5-c-title pf-m-md"
                    data-ouia-component-id="OUIA-Generated-Title-3"
                    data-ouia-component-type="PF5/Title"
                    data-ouia-safe="true"
                  >
                    dolor
                  </h2>
                </div>
              </div>
            </div>
          </div>
          <div
            class="pf-v5-c-card__body curiosity-graph__totals-column-card-body"
          >
            <div>
              sit
            </div>
          </div>
          <div
            class="pf-v5-c-card__footer curiosity-graph__totals-column-card-footer"
          >
            <div>
              dolor sit timestamp-{"dataSets":[]}
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="curiosity-graph__totals-graph-column curiosity-usage-graph__totals-graph-column"
      />
    </div>
  </div>
</graphcardmetrictotals>
`;

exports[`GraphCardMetricTotals Component should handle multiple display states: error 1`] = `
<div
  className="curiosity-graph__totals curiosity-usage-graph__totals"
  data-test="graphMetricTotals-hello-world"
  data-test-data="{"dataSets":[]}"
>
  <div>
    <div
      className="curiosity-graph__totals-column curiosity-usage-graph__totals-column"
    >
      <Card
        className="curiosity-graph__totals-column-card curiosity-usage-graph__totals-column-card blur"
        data-test="graphMetricTotalsCard-0"
        isPlain={true}
      >
        <CardHeader
          className="curiosity-graph__totals-column-card-header"
        >
          <CardTitle>
            <Title
              headingLevel="h2"
              size="md"
            />
          </CardTitle>
        </CardHeader>
        <CardBody
          className="curiosity-graph__totals-column-card-body"
        >
          <div />
        </CardBody>
        <CardFooter
          className="curiosity-graph__totals-column-card-footer"
        >
          <div />
        </CardFooter>
      </Card>
    </div>
  </div>
  <div>
    <div
      className="curiosity-graph__totals-graph-column curiosity-usage-graph__totals-graph-column"
    />
  </div>
</div>
`;

exports[`GraphCardMetricTotals Component should handle multiple display states: fulfilled 1`] = `
<div
  className="curiosity-graph__totals curiosity-usage-graph__totals"
  data-test="graphMetricTotals-hello-world"
  data-test-data="{"dataSets":[]}"
>
  <div>
    <div
      className="curiosity-graph__totals-column curiosity-usage-graph__totals-column"
    >
      <Card
        className="curiosity-graph__totals-column-card curiosity-usage-graph__totals-column-card "
        data-test="graphMetricTotalsCard-0"
        isPlain={true}
      >
        <CardHeader
          className="curiosity-graph__totals-column-card-header"
        >
          <CardTitle>
            <Title
              headingLevel="h2"
              size="md"
            >
              lorem
            </Title>
          </CardTitle>
        </CardHeader>
        <CardBody
          className="curiosity-graph__totals-column-card-body"
        >
          <div>
            ipsum
          </div>
        </CardBody>
        <CardFooter
          className="curiosity-graph__totals-column-card-footer"
        >
          <div>
            dolor sit
          </div>
        </CardFooter>
      </Card>
    </div>
  </div>
  <div>
    <div
      className="curiosity-graph__totals-graph-column curiosity-usage-graph__totals-graph-column"
    />
  </div>
</div>
`;

exports[`GraphCardMetricTotals Component should handle multiple display states: pending 1`] = `
<div
  className="curiosity-graph__totals curiosity-usage-graph__totals"
  data-test="graphMetricTotals-hello-world"
  data-test-data="{"dataSets":[]}"
>
  <div>
    <div
      className="curiosity-graph__totals-column curiosity-usage-graph__totals-column"
    >
      <Card
        className="curiosity-graph__totals-column-card curiosity-usage-graph__totals-column-card "
        data-test="graphMetricTotalsCard-0"
        isPlain={true}
      >
        <CardHeader
          className="curiosity-graph__totals-column-card-header"
        >
          <CardTitle>
            <Title
              headingLevel="h2"
              size="md"
            >
              <Loader
                skeletonProps={
                  {
                    "size": "lg",
                  }
                }
                tableProps={{}}
                variant="skeleton"
              />
            </Title>
          </CardTitle>
        </CardHeader>
        <CardBody
          className="curiosity-graph__totals-column-card-body"
        >
          <div>
            <Loader
              skeletonProps={
                {
                  "height": "60px",
                  "size": "lg",
                }
              }
              tableProps={{}}
              variant="skeleton"
            />
          </div>
        </CardBody>
        <CardFooter
          className="curiosity-graph__totals-column-card-footer"
        >
          <div>
            <Loader
              skeletonProps={
                {
                  "size": "lg",
                }
              }
              tableProps={{}}
              variant="skeleton"
            />
          </div>
        </CardFooter>
      </Card>
    </div>
  </div>
  <div>
    <div
      className="curiosity-graph__totals-graph-column curiosity-usage-graph__totals-graph-column"
    />
  </div>
</div>
`;

exports[`GraphCardMetricTotals Component should render a basic component: basic 1`] = `
<graphcardmetrictotals
  props="{
  "children": [
    {}
  ]
}"
>
  <div
    class="curiosity-graph__standalone curiosity-usage-graph__standalone"
    data-test="graphStandalone"
  >
    lorem ipsum
  </div>
</graphcardmetrictotals>
`;
